# skeleton

./: .gitignore  dune  dune-project
src/: dune
src/api/: api.ml  dune  encoding.ml  handlers.ml  services.ml  session_arg.ml  sessions.ml
src/common/: data_types.ml  dune  mLwt.ml  mRes.ml
src/db/: db.ml  db_lwt.ml  dune  misc_db.ml  versions.ml
src/ui/: dune  login.ml  main_ui.ml  request.ml  route.ml  session.ml  ui.ml  v.ml  vtypes.mli
static/: index.html
static/css/: main.css
