(library
 (name api_services)
 (wrapped false)
 (modules encoding services session_arg)
 (libraries ez-api.session-client data_common))

(library
 (name api_lib)
 (wrapped false)
 (modules sessions handlers api)
 (libraries ez-api.server api_services db_lwt))

(executable
 (name api_server)
 (modules api_server)
 (libraries api_lib))