
(library
 (name db_lwt)
 (wrapped false)
 (preprocess (pps pgocaml_ppx))
 (preprocessor_deps (env_var PGDATABASE))
 (modules misc_db monad_lwt db_lwt db)
 (libraries lwt.unix data_common versions base64))

(library
 (name versions)
 (preprocess (pps pgocaml_ppx))
 (preprocessor_deps (env_var PGDATABASE))
 (modules versions)
 (libraries ez-pgocaml pmisc))
