(library
 (name ui_lib)
 (wrapped false)
 (modules_without_implementation vtypes)
 (modules ui vtypes v session request login route)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries data_common api_services vue-jsoo base64))

(executable
 (name main_ui)
 (modules main_ui)
 (libraries ui_lib)
 (preprocess (pps js_of_ocaml-ppx))
 (modes js))
